--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@ h6 {
 #__next {
     isolation: isolate;
 }
+
+.hero-bg {
+    /* Rectangle 4 */
+
+    position: absolute;
+    width: 100%;
+    height: 832px;
+    left: 0px;
+
+    background: linear-gradient(
+        81deg,
+        #e7f0ff 9.01%,
+        rgba(232, 241, 255, 0.47) 89.11%
+    );
+}
