designed hero section

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 * {
     margin: 0;
-    line-height: calc(2px + 1em + 2px) !important;
+    /* line-height: calc(2px + 1em + 2px) !important; */
 }
 
 html,
@@ -54,4 +54,8 @@ h6 {
         #e7f0ff 9.01%,
         rgba(232, 241, 255, 0.47) 89.11%
     );
+}
+
+.swiper-slide {
+    display: flex !important;
 }
